syntax = "proto3";

option go_package = "./;proto";

message PlayerDataBin {
  PlayerBasicCompBin basic_bin = 1; // 玩家基础信息
  PlayerAvatarCompBin avatar_bin = 2; // 玩家角色信息

  PlayerItemCompBin item_bin = 5; // 背包信息

  PlayerSceneCompBin scene_bin = 7; // 场景
}

message PlayerBasicCompBin{
  uint32 level = 1; // 等级
  uint32 exp = 2; // 经验
  string nickname = 3; // 昵称
  uint32 total_game_time = 4; // 总游戏时间
  uint32 avatar_id = 5; // 主角
  bool is_weather_locked = 6; // 是否锁定天气
  bool is_game_time_locked = 7; // 是否锁定游戏内时间
  float persist_stamina_limit = 8; // 体力限制
  float cur_persist_stamina = 9; // 主体力
  float cur_temporary_stamina = 10; // 临时体力
  map<uint32, uint32> open_state_map = 11; // 地图开放状态
  uint64 player_time_ms = 12; // 玩家时间
  fixed32 last_login_time = 13; // 最后登录时间
  fixed32 register_time = 14; // 注册时间
  uint32 total_login_days = 15; // 总登录天数
  string signature = 16; // 签名
  repeated uint32 reward_taken_level_list = 17; // 等级奖励列表
  uint32 language_type = 18; // 语言
  string client_app_version = 19; // 客户端版本
  string client_device_info = 20; // 客户端设备信息
  string client_system_version = 21; // 客户端系统版本
  bool is_guest = 22; // 是否游客登录
  uint32 online_time = 23; // 在线时间？
  bool is_proficient_player = 24; // 是否老玩家
  uint32 set_language_tag = 26; // 设置语言标签
  uint32 head_image_avatar_id = 27; // 头像id
  uint32 guid_seq_id = 28; // 全局唯一id
  bool is_rebate_mail_sent = 29; // 是否发送回扣邮件
  bool is_rebate_mail_received = 30; // 是收到的回扣邮件
  map<uint32, uint32> prop_map = 31; // 玩家属性
  uint32 world_level = 32; // 世界等级
  uint32 NameCardId = 33; // 头像
}

message PlayerAvatarCompBin {
  map<uint32, AvatarBin> avatar_list = 1; // 角色列表
  uint64 cur_avatar_guid = 2; // 主角唯一id
  map<uint32, AvatarTeamBin> team_map = 5; // 队伍
  uint32 cur_team_id = 6; // 当前队伍id
  //uint64 last_change_avatar_time = 7; // 最后更改角色时间
  //bool is_spring_auto_use = 8; // 是否自动使用？
  //uint32 spring_auto_use_percent = 9; // 自动使用百分比？
  //fixed32 last_backgroud_avatar_recover_time = 10; // 最后角色背景重置时间？
  //uint32 cur_spring_volume = 11; // 当前****？
  bool is_flyable = 12; // 是否有风之翼
  //bool is_transferable = 13; // 是否可以转移？
  //uint32 last_avatar_guid = 14; // 最后一个角色全局id？
  uint64 choose_avatar_guid = 15; // 选择角色全局id？
  uint32 die_type = 16; // 类型？
  //repeated uint64 temp_avatar_guid_list = 17; // 队伍全局id列表
  //map<uint32, AvatarBuffBin> avatar_team_buff_map = 18; // 角色队伍buff
  //uint32 last_server_buff_uid = 19; // 最后服务器buff uid？
  //uint32 total_expedition_num = 20; // 总冒险数量？
  repeated uint32 owned_flycloak_list = 21; // 拥有的风之翼列表
}

message AvatarBin {
  uint32 avatar_type = 1; // 类型
  uint32 avatar_id = 2; // id
  uint64 guid = 3; // 唯一id
  uint32 level = 4; // 等级
  uint32 life_state = 5; // 状态
  float cur_hp = 6; // 当前血量
  float cur_elem_energy = 7; // 当前元素能量
  uint32 promote_level = 8; // 突破等级
  uint32 skill_depot_id = 9; // 技能库id
  map<uint32, AvatarSkillBin> skill_map = 10; // 技能
  //map<uint32, AvatarBuffBin> buff_map = 11;
  //map<uint32, AvatarSkillDepotBin> depot_map = 12;
  uint64 weapon_guid = 13; // 装备的武器唯一id
  float satiation_val = 14; // 饱食度
  float satiation_penalty_time = 15; // 饱食度惩罚时间
  uint32 flycloak_id = 16; // 风之翼id
  map<uint32, float>fight_prop_map = 17;
  uint32 born_time = 18; // 获取时间
  uint32 exp = 19; // 经验
  uint32 fetter_level = 20; // 好感度
  uint32 fetter_exp = 21; // 好感度经验
  repeated uint32 talent_id_list = 22; // 已解锁命座
}

message AvatarTeamBin {
  repeated uint32 avatar_guid_list = 1; // 队伍角色
  string team_name = 2; // 队伍名称
  uint32 last_cur_avatar_id = 3; // 当前上场角色
}

message AvatarBuffBin {
  uint32 left_time = 1;
  uint32 buff_uid = 2;
  uint32 buff_type = 3;
}

message AvatarSkillBin {
  uint32 pass_cd_time = 1;
  repeated uint32 full_cd_time_list = 2;
}

message AvatarSkillDepotBin {
  repeated uint32 talent_id_list = 1;
  uint32 core_proud_skill_level = 2;
  repeated uint32 inherent_proud_skill_list = 3;
  map<uint32, uint32> skill_level_map = 4;
}

message VectorBin {
  float x = 1;
  float y = 2;
  float z = 3;
}

message PlayerItemCompBin {
  map<uint32, int64> item_list = 1; // 物品
  uint32 hcoin = 2; // 米币
  uint32 scoin = 3; // 原石
  uint32 mcoin = 4;
  uint32 legendary_key = 5; // 传奇钥匙
  AutoRecoverItemBin resin_record = 7; // 树脂
  map<uint64, ReliquaryBin>  reliquary_list = 8; // 圣遗物列表
  map<uint64, WeaponBin> weapon_list = 9; // 武器列表
}

message AutoRecoverItemBin {
  uint32 value = 1;
  uint32 bought_num = 3; // 数量
  fixed32 last_bought_time = 4; // 最后刷新时间
  fixed32 next_refresh_time = 5; // 下一个刷新时间
}

message ReliquaryBin {
  uint32 level = 1;
  uint32 exp = 2;
  uint32 main_prop_id = 4;
  repeated uint32 append_prop_id_list = 5;
}

message WeaponBin {
  uint32 level = 1; // 等级
  uint32 exp = 2; // 经验
  uint32 promote_level = 3; // 突破等级
  map<uint32, uint32> affix_map = 4; // 词条？
  uint64 guid = 5; // 唯一id
  bool is_lock = 6; // 是否锁定
  uint32 refinement = 7; // 精炼等级
  uint32 avatar_id = 8; // 装备角色
  uint32 weapon_id = 9; // 武器id
}

message PlayerSceneCompBin {
  //WorldBin world = 1;
  uint32 cur_scene_owner_uid = 2; // 当前世界主人uid
  uint32 my_prev_scene_id = 3; // 我的上一个场景id
  VectorBin my_prev_pos = 4; // 我的上一个场景坐标
  VectorBin my_prev_rot = 5; // 我的上一个场景朝向
  uint32 my_cur_scene_id = 6; // 我的当前世界id
  repeated uint32 monster_seen_list = 7; // 怪物列表
  repeated MapMarkPointBin mark_point_list = 8; // 标记点列表
  //map<uint32,SceneProductBin> world_product_map = 9; // 大世界产物地图
  uint32 trivial_entity_drop_num = 10;
  fixed32 trivial_entity_drop_time = 11;
  //map<uint32,SceneBossChestBin> scene_boss_chest_map = 12; // 场景boss
  //map<uint32,SubfieldDropBin> subfield_drop_map = 13;
  fixed32 subfield_drop_time = 14;
  uint32 my_cur_area_id = 15; // 当前区域id
  //map<uint32,DungeonProductBin> dungeon_product_map = 16; // 副本产物
  map<uint32,uint32> chest_open_num_map = 17; // 宝箱开启情况
  map<uint32,uint32> gadget_interact_num_map = 18; // gadget 交互情况
  uint32 total_boss_chest_take_num = 19; // 全部大宝箱开启情况？
  map<string,uint32> daily_gadget_drop_category_count_map = 20;
  uint32 last_refresh_daily_gadget_drop_category_count_map_time = 21; // 每日小道具刷新？
  //repeated MonsterBeKilledNumBin monster_killed_num_list = 22;
  VectorBin my_cur_pos = 23; // 当前数据库坐标
  VectorBin my_cur_rot = 24; // 当前数据库朝向
}

message MapMarkPointBin {
  uint32 scene_id = 1;
  string name = 2;
  VectorBin pos = 3;
  uint32 point_type = 4;
  uint32 monster_id = 5;
  uint32 from_type = 6;
  uint32 quest_id = 7;
}

message PlayerData {
  uint32 uid = 1; // uid
  string nickname = 2; // 昵称
  fixed32 last_login_time = 3; // 最后登录时间
  bytes bin = 4; // 数据
  uint32 data_version = 5; // 数据版本
  uint32 level = 6; // 等级
  uint32 exp = 7; // 经验
  string json_data = 8; //
  bytes extra_bin_data = 9; // 额外的数据
}
